// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default <Bar /> 1`] = `
.c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

<div
  className="c0"
/>
`;

exports[`renders default <BottomBar /> 1`] = `
.c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.c1 {
  margin: auto 0 0 0;
}

<div
  className="c0 c1"
/>
`;

exports[`renders default <Content /> 1`] = `
@media screen and (min-width:40rem) {
  .c0 {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    margin: 0 1.5rem;
  }
}

<div
  className="c0"
/>
`;

exports[`renders default <Main /> 1`] = `
.c0 {
  display: flex;
  flex-flow: column;
  align-content: center;
  align-items: center;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  text-align: center;
}

<main
  className="c0"
/>
`;
